* BUGFIX: Import Binary File no longer freezes the GUI
* BUGFIX: New Plotters showed a "This should not happen" message once in a while and where unusable until restart of RapidMiner (Bug #1274)
* BUGFIX: Real to Integer operator: don't convert missings to 0, but keep them as missing
* BUGFIX: Fixed wrong cell selection on rightclick for some tables after reordering columns
 

Changes from RapidMiner 5.2.6 to 5.2.8
--------------------------------------
* Send Mail operator has a new behavior: Stop process and show error if mail cannot be send
* Send Mail operator has a new parameter: 'Ignore errors'
* Write CSV operator has a new parameter: 'Append to file'
* Write Excel operator has a new parameter: File Format (xls, xlsx)
* New Operator: Reorder Attributes
* Set Macro: now can define empty macros
* BUGFIX: Fix a "This should not happen" message in the Advanced Charts.
* BUGFIX: Keep old settings after updating RapidMiner
* BUGFIX: 'Cancel' ParameterTypeList Dialog works correctly now
* BUGFIX: FP-Growth correctly handles parameter 'must contain'
* BUGFIX: Join Operator displays MetaData correctly

Changes from RapidMiner 5.2.3 to 5.2.6
--------------------------------------
* Read SAS operator
* Added timezone parameter to Date to Nominal operator
* Excel 2007 support
* Dialog for editing cron expressions
* Dialog to see preview for regular expressions
* Update Database operator
* Easier mechanism for Extensions to create configurable items
* Japanese and German translation

Changes from RapidMiner 5.2.1 to 5.2.2
--------------------------------------
* Remove Correlated Attributes uses deterministic random numbers
* Improved Repository Tree handling (save expansion state on refresh and improved tree selection on entry removal)
* Improved exporting of Advanced Charts View

Changes from RapidMiner 5.2.0 to 5.2.1
--------------------------------------
* Added operators to manage repository entries: Copy, Move, Delete, Rename

Changes from RapidMiner 5.1 to 5.2