@@ -70,6 +70,7 @@ com.rapid_i.deployment.update.client.UpdateManager.ignoring_update_check_last_ch
 com.rapid_i.deployment.update.client.UpdateManager.update_checking=Checking for updates.
 com.rapid_i.deployment.update.client.UpdateManager.checking_for_updates_error=Error checking for updates: {0}
 com.rapid_i.deployment.update.client.UpdateManager.no_updates_aviable=No updates since {0}.
+com.rapid_i.deployment.update.client.UpdateManager.md5_failed=Download of {0} has failed. Please try to download {0} again.
 com.rapid_i.deployment.update.client.UpdateManager.purchased_extensions_checking=Checking for recently purchased extensions.
 com.rapid_i.deployment.update.client.UpdateManager.checking_for_purchased_extensions_error=Error checking for recently purchased extensions: {0}
 com.rapid_i.deployment.update.client.UpdateManager.malformed_update_server_uri=Malformed Update Server URI: {0}
